do apaptiv for help

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <div class="help">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 help__left">
+                <div class="col-xl-6 col-lg-12 help__left">
                    <div class="help__info">
                         <h2 class="help__title">Поможем в выборе</h2>
                         <p class="help__subtitle">Если у вас есть вопросы о формате или вы не знаете что выбрать, оставьте свой номер: мы позвоним, чтобы ответить на все ваши вопросы.</p>
@@ -419,7 +419,7 @@
                         </div>
                    </div>
                 </div>
-                <div class="col-md-6 help__right">
+                <div class="col-xl-6 help__right">
                     <div class="help__photo">
                         
                     </div>
