--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="header">
         <div class="container">
             <div class="row">
-                   <div class="col-md-5">
+                   <div class="col-xl-4 col-lg-5">
                         <div class="header__left-side">
                             <img src='/img/svg/logo.svg' class="header__logo"></img>
                             <button class='header__catalog'><span class='header__text'>Каталог курсов</span><img src='img/triangle.png' class='header__pic'></img></button>
                         </div>
                    </div>
-                    <div class="col-md-6 offset-md-1">
+                    <div class="offset-xl-2 col-xl-6 col-lg-7 offset-lg-0">
                         <div class="header__right-side">
                             <ul class="header__list">
                                 <li class="header__item header__item-1"><a href="" class="header__link">О компании</a></li>
