--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
     <div class="rise">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-lg-8 col-md-12">
                     <h1 class="rise__title">
                         Повышение профессиональной квалификации дистанционно
                     </h1>
                 </div>
-                <div class="col-md-4">
-                    <img src="img/girl__note-removebg-preview.png" alt="" class="rise__pic">
+                <div class="col-lg-4 col-md-12">
+                    <img src="img/girl__note-removebg-preview.png" alt="" class="rise__pic rise__pic-lg">
+                    <img src="img/rise-mobile-girl.png" alt="" class="rise__pic rise__pic-mobile">
                 </div>
             </div>
         </div>
@@ -106,12 +107,12 @@
     <div class="skills">
         <div class="container">
             <div class="row skills__row-1">
-                <div class="col-md-5">
+                <div class="col-md-7">
                     <h3 class="skills__title">
                         Повышение квалификации
                     </h3>
                 </div>
-                <div class="offset-md-3 col-md-4">
+                <div class="col-md-5">
                     <p class='skills__outset'>
                         <a href='#' class="skills__link">
                             посмотреть все
