fix  and do all adaptiv for variables

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="variables">
         <div class="container">
             <div class="row">
-               <div class="col">
+               <div class="col-xl-12 variables__wrapper">
                     <ul class="variables__list">
                         <ul class="variables__item">
                            <li class='variables__text'>
