end lgd reliase

--- a/index.html
+++ b/index.html
@@ -331,25 +331,41 @@
                 </div>
             </div>
             <div class="row trust__row-2">
-                <div class="col d-flex">
-                    <img src="img/sber.png" alt="" class='trust__img'>
+                <div class="trust__wrapper col">
+                   <div class="trust__item">
+                        <img src="img/sber.png" alt="" class='trust__img'>
+                   </div>
 
-                    <img src="img/mts.png" alt="" class='trust__img'>
+                   <div class="trust__item">
+                        <img src="img/mts.png" alt="" class='trust__img'>
+                    </div>
 
-                    <img src="img/sber.png" alt="" class='trust__img'>
+                    <div class="trust__item">
+                        <img src="img/sber.png" alt="" class='trust__img'>
+                    </div>
                
-                    <img src="img/mts.png" alt="" class='trust__img'>
+                    <div class="trust__item">
+                        <img src="img/mts.png" alt="" class='trust__img'>
+                    </div>
                 </div>
             </div>
             <div class="row trust__row-3">
-                <div class="col d-flex">
-                    <img src="img/sber.png" alt="" class='trust__img'>
+                <div class="trust__wrapper col">
+                    <div class="trust__item">
+                        <img src="img/sber.png" alt="" class='trust__img'>
+                    </div>
 
-                    <img src="img/mts.png" alt="" class='trust__img'>
+                    <div class="trust__item">
+                        <img src="img/mts.png" alt="" class='trust__img'>
+                    </div>
 
-                    <img src="img/sber.png" alt="" class='trust__img'>
+                    <div class="trust__item">
+                        <img src="img/sber.png" alt="" class='trust__img'>
+                    </div>
                
-                    <img src="img/mts.png" alt="" class='trust__img'>
+                    <div class="trust__item">
+                        <img src="img/mts.png" alt="" class='trust__img'>
+                    </div>
                 </div>
             </div>
         </div>
